# cacheforge

./: .gitignore  CMakeLists.txt  PLAN.md  README.md  STATUS.md
include/protocol/: dispatcher.h  parser.h  response.h
include/server/: connection.h  event_loop.h  server.h  thread_pool.h
include/storage/: aof_replay.h  aof_writer.h  sharded_storage.h  storage.h
src/protocol/: dispatcher.cpp  parser.cpp  response.cpp
src/server/: connection.cpp  event_loop.cpp  main.cpp  server.cpp  thread_pool.cpp
src/storage/: aof_replay.cpp  aof_writer.cpp  sharded_storage.cpp  storage.cpp
tests/: test_aof.cpp  test_lru.cpp  test_parser.cpp  test_sharded_storage.cpp  test_stats.cpp  test_storage.cpp  test_ttl.cpp
tools/: cache_bench.cpp  cache_cli.cpp
